<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingsFragment">

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/settings"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currencyTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/currency"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabel" />

    <RadioGroup
        android:id="@+id/currencyRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyTypeLabel">

        <RadioButton
            android:id="@+id/usdRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4sp"
            android:paddingEnd="4sp"
            android:text="@string/usd" />

        <RadioButton
            android:id="@+id/eurRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4sp"
            android:paddingEnd="4sp"
            android:text="@string/eur" />

        <RadioButton
            android:id="@+id/cadRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4sp"
            android:paddingEnd="4sp"
            android:text="@string/cad" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>